--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,12 @@ dependencies:
   # firebase_admob:
   share:
   audioplayers: ^0.8.0
+  flutter_launcher_icons: ^0.7.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/icon.png"
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +52,7 @@ flutter:
   assets:
    - 1.jpg
    - bg.jpg
+   - album.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
