--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   share: ^0.6.0
   audioplayers: ^0.8.0
   flutter_launcher_icons: ^0.7.0
+  marquee: ^1.1.0
 
 flutter_icons:
   android: "launcher_icon"
