audio added & events updated

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,10 @@ flutter:
    - bg.jpg
    - album.png
    - babaji.png
+   - audio.m4v
+   - audio.mp3
+   - repeater.mp3
+   - placeholder.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
