--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0+1
-  youtube_player: ^0.6.1
+  youtube_player: ^2.0.2
   # loadmore:
   # firebase_admob:
   share: ^0.6.0
@@ -55,6 +55,8 @@ flutter:
    - bg.jpg
    - album.png
    - babaji.png
+   - baba.jpg
+   - baba2.jpg
    - audio.m4v
    - audio.mp3
    - repeater.mp3
